--- a/web/estils.css
+++ b/web/estils.css
@@ -1,6 +1,6 @@
 /* Definicions de classes utils genèriques */
 .desktop { display: flex !important; }
-.mobile  { display: flex !important; }
+.mobile  { display: flex !important;}
 @media only screen and (max-device-width: 599px) { .desktop { display: none !important; } }
 @media only screen and (min-device-width: 600px) { .mobile  { display: none !important; } }
 .flex       { display: flex; }
@@ -10,55 +10,237 @@
 .halfWidth  { max-width: 50%; }
 .botoIcona  { cursor: pointer; }
 
+/* Menu */
+
+#frontendMenuWeb {
+    background-image: url(imatges/fondomenu.jpg);
+    background-size: cover;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    padding: 40px;
+    width: 100%;
+    height: 50px;
+    border: solid 3px black;
+    position: sticky;
+    top: 0;
+}
+
+#frontendMenuMobil {
+    background-image: url(imatges/fondomenu.jpg);
+    background-size: cover;
+    position: sticky;
+    top: 0;
+}
+
+
+
 /* Definicions específiques */
 table, th, td {
     border-collapse: collapse;
     border: 1px solid black;
 }
-
-.botoMenu {
-    color: blue;
-    cursor: pointer;
-    margin: 0 16px;
-}
-
-.botoMenu:hover {
-    text-decoration: underline;
-}
-
 body {
     font-family: "Open Sans";
 }
-
+body > div {
+    display: none;
+}
 body > #frontendHome {
     display: flex;
 }
 
-body > #frontendPresentacio {
-    display: none;
+.sticky {
+    position: sticky;
+    top: 0;
+}
+.margin {
+    margin: 10px;
 }
 
-body > #frontendProductes {
-    display: none;
+/* Menu estilos */
+
+.botoMenu {
+    color: yellow;
+    cursor: pointer;
+    margin: 33px 20px;
+    font-size: 20px;
+}
+.menumar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-image: url(imatges/arenamar.jpg);
+    background-size: cover;
+    height: 400px;
+    border: solid 3px black;
+    
+}
+.divmenu {
+    display: flex;
+    background-color: slategrey;
+    width: 100%;
+    height: 50px;
+    position: sticky;
+    top: 0px;
+}
+.botoMenu:hover {
+    color: teal;
+    font-size: 25px; 
+}
+.titulo {
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-style: oblique;
+    margin-left: 200px;
+    
+}
+.titulo2 {
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-style: oblique;
+    margin-left: 900px;
+    
+}
+.menuicono {
+    align-items: center;
+}
+.boton {
+    background-color: darkgray;
+    height: 51px;
+}
+.menumobile {
+    font-size: 20px;
+    align-items: center;
+    margin-top: 5px;
+    margin-left: 20px;
+    font-style: oblique;
+}
+ 
+ /* Presentació */
+
+.frontedPresentacio {
+    display: flex;
+    flex-direction: column;
+}
+.titulopre {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+}
+@media only screen and (max-device-width: 599px) {
+    .titulopre {
+        max-width: calc(100% - 64px);    
+    }
+}
+.targetes {
+    display: flex;
+    flex-direction: row;
+    padding: 20px 40px 40px 40px;
+
+}
+@media only screen and (max-device-width: 599px) {
+    .targetes {
+        flex-direction: column;
+    }
+}
+.texttar {
+    margin-right: 100px;
+}
+.demo-card-square > .mdl-card__titleA {
+    background: url('https://mochilerosentailandia.com/wp-content/uploads/2018/07/japon-primavera.jpg') center / cover;
+}
+.demo-card-square > .mdl-card__titleB {
+    background: url('https://pipr.restplass.no/rg/-/scale_crop/980x400/center/https://storage.googleapis.com/rg-wp-assets/2019/02/b6/4f/b6/bc/11/87/dd/e4/spania-barcelona-view-beach-1000x667.jpg') center / cover;
+}
+.demo-card-square > .mdl-card__titleC {
+    background: url('https://elviajero.elpais.com/elviajero/imagenes/2019/05/09/actualidad/1557394830_938041_1557396424_noticia_grande.jpg') center / cover;
+}  
+.difellocs {
+    background-color: gold;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    flex-direction: row;
+    font-size: 2em;
+    height: 2em;
 }
 
-body > #frontendProductes > #productesContinguts {
+.cardtitle {
+    background-color: black;
+    display: flex;
+    bottom: 0;
+    vertical-align: bottom;
+}
+.presentacio1 {
+    margin-left: 20px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 2em;
+}
+.colortitle {
+    background: gold;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.slider {
+    width: 100%;
+    margin: auto;
+    overflow: hidden;
+    margin-top: 30px;
+}
+.slider ul {
+    display: flex;
+    padding: 0;
+    width: 400%;
+    animation: cambio 20s infinite alternate;
+}
+.slider il:hover {
+    animation-play-state: paused;
+    cursor: pointer;
+}
+.slider li {
+    width: 100%;
+    list-style: none;
+}
+.slider img {
+    width: 100%;
+    height: 500px;
+}
+
+@keyframes cambio {
+    0%{margin-left: 0%;}
+    20%{margin-left: 0%;}
+
+    25%{margin-left:-100%;}
+    45%{margin-left:-100%;}
+
+    50%{margin-left:-200%;}
+    70%{margin-left:-200%;}
+
+    75%{margin-left:-300%;}
+    100%{margin-left:-300%;}
+}
+
+/* Presentació MOBILE*/
+
+
+
+/* Otros */
+
+#productesContinguts {
     width: 100%;
 }
-
-body > #frontendContacte {
-    display: none;
-}
-
-body > #backofficeUsuaris {
-    display: none;
-}
-
-body > #backofficeProductes {
-    display: none;
-}
-
-body > #popups {
+#popups {
     background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
     display: none;
@@ -69,11 +251,8 @@ body > #popups {
     height: 100%;
     width: 100%;
 }
-
 #popups > div {
     border: solid 1px black;
     background-color: lightcyan;
     display: none;
 }
-
-
