--- a/web/estils.css
+++ b/web/estils.css
@@ -72,8 +72,9 @@ body > #frontendHome {
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-image: url(imatges/arenamar.jpg);
-    background-size: cover;
+    background-image: url(https://besthqwallpapers.com/Uploads/29-12-2017/35507/thumb2-tropics-4k-summer-sea-palms.jpg);
+    background-size: inherit;
+    width: 100%;
     height: 200px;
     border: solid 3px black;
     
@@ -145,12 +146,26 @@ body > #frontendHome {
     width: 100%;
 }
 .fuentepre {
-    font-size: 1,5em;
+    text-align: center;
+}
+.imgpre {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.imgpre2 {
+    margin: 0 1em;
 }
 @media only screen and (max-device-width: 599px) {
     #frontendPresentacio H4 {
         font-size: 1.5em;
         height: 4.5em;
+    }
+    .imgpre {
+        flex-direction: column;
+    }
+    .imgpre2 {
+        margin: 1em 0;
     }
 }
 
@@ -264,6 +279,57 @@ body > #frontendHome {
 
 /* Productes */
 
+#frontendProductes {
+    display: none;
+}
+.productes1 {
+    justify-content: center;
+    align-items: center;
+    margin: 2em;
+}
+.productes1 img {
+    box-shadow: 5px 7px 9px 3px midnightblue
+}
+.productes2 {
+    text-align: center;
+    font-size: 1em;
+    font-weight: normal;
+    background-color: cornsilk;
+    width: 25em;
+    height: 11em;
+    border: 2px solid black;
+}
+.productesexp {
+    background-image: url(imatges/cielop.jpg);
+    width: 98%;
+    background-size: cover;
+    border: 4px solid gold
+}
+#productesContiguts {
+    display: flex;
+    
+}
+.width100 {
+    width: 100%;
+}
+@media only screen and (min-device-width: 599px) {
+    .productes1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        flex-wrap: wrap
+    }
+    .productesexp {
+        width: 1341px;
+    }
+}
+@media only screen and (max-device-width: 599px) {
+    .productes1 img {
+        width: 25em;
+        margin: 1em 0;
+    }
+    
+}
 
 
 /* Otros */
