LINK A REPOSITORIO GITHUB

--- a/web/estils.css
+++ b/web/estils.css
@@ -353,3 +353,12 @@ body > #frontendHome {
     background-color: lightcyan;
     display: none;
 }
+.footer {
+    background-color: mediumaquamarine;
+    height: 4em;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+}
